--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
-		"mocha": "^3.2.0"
+		"mocha": "^3.2.0",
+		"node-fetch": "^3.3.2"
 	},
 	"repository": {
 		"type": "git",
